--- a/google-maps-geocoding.cabal
+++ b/google-maps-geocoding.cabal
@@ -33,7 +33,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Web.Google.Geocoding
+  exposed-modules:     Web.Google.Maps.Common
+                       Web.Google.Geocoding
   build-depends:       base >= 4.8 && < 4.15
                      , aeson >= 1.1 && < 1.6
                      , http-client >= 0.5 && < 0.8
