--- a/google-maps-geocoding.cabal
+++ b/google-maps-geocoding.cabal
@@ -41,6 +41,7 @@ library
                      , servant >= 0.16 && < 0.19
                      , servant-client >= 0.16 && < 0.19
                      , text >= 1.2 && < 1.3
+                     , double-conversion >= 0.2 && < 2.1
   default-language:    Haskell2010
   ghc-options:         -Wall
 
